--- a/Index.html
+++ b/Index.html
@@ -240,8 +240,8 @@ safari_web_id: "web.onesignal.auto.105cd246-aae6-4c14-8684-2fd8214524d1",
   <!-- Encabezado -->
   <header>
     <div class="header-container">
-      <div class="logo" onclick="window.location.href='https://comunidadmjc.com.ar/'">MJC</div>
-      <div class="back-home" onclick="window.location.href='https://comunidadmjc.com.ar/'">Volver a la Página Principal</div>
+      <div class="logo" onclick="window.location.href='https://www.comunidadmjc.com.ar/'">MJC</div>
+      <div class="back-home" onclick="window.location.href='https://www.comunidadmjc.com.ar/'">Volver a la Página Principal</div>
       <!-- Puedes agregar aquí otro elemento si lo deseas -->
     </div>
   </header>
