--- a/Index.html
+++ b/Index.html
@@ -87,6 +87,11 @@
       margin-bottom: 10px;
       color: var(--text-color);
     }
+    .intro-message .note {
+      font-size: 1.4rem;
+      color: #a00;
+      font-style: italic;
+    }
     
     /* Sección Noticias y Eventos */
     #news-events {
@@ -309,7 +314,7 @@
       Para estar al tanto de cada culto y evento, simplemente toca la campanita que aparece en la esquina.
     </p>
     <p>
-      <strong>En dispositivos móviles:</strong> si notas que la campanita requiere un segundo toque, recuerda que una vez que aceptes el permiso, la suscripción se activará automáticamente. ¡No te preocupes, solo toca una vez y espera unos segundos!
+      <strong>Importante en dispositivos móviles:</strong> deberás tocar dos veces; el primer toque te pedirá permitir notificaciones y el segundo las activará.
     </p>
     <p>
       ¡Gracias por confiar en nosotros!
